[fish] Use QByteArray for outBuf everywhere

During authentication we fetch the password from the auth info
and pass it to writeChild(), which points outBuf to it.

However the authinfo password data disappears before we write.

To fix this make outBuf own its data.

BUG: 479707